# pact-cuSNN-AE

./: README.md
2080Ti/: run_2080Ti.py
2080Ti/end2end-model-eval/densenet169/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet169Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet201/: CMakeLists.txt
2080Ti/end2end-model-eval/densenet201Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/resnet152/: CMakeLists.txt
2080Ti/end2end-model-eval/resnet50/: CMakeLists.txt
2080Ti/end2end-model-eval/resnet50Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/vgg16/: CMakeLists.txt
2080Ti/end2end-model-eval/vgg16Scnn/: CMakeLists.txt
2080Ti/end2end-model-eval/vgg19/: CMakeLists.txt
2080Ti/end2end-model-eval/vgg19Scnn/: CMakeLists.txt
2080Ti/layers_eval/densenet201Scnn/: CMakeLists.txt
2080Ti/layers_eval/eval_cudnn/: CMakeLists.txt
2080Ti/layers_eval/resnet152Scnn/: CMakeLists.txt
v100/: run_v100.py
v100/end2end-energy-eval/densenet169/: CMakeLists.txt
v100/end2end-energy-eval/densenet169Scnn/: CMakeLists.txt
v100/end2end-energy-eval/densenet201/: CMakeLists.txt
v100/end2end-energy-eval/resnet152/: CMakeLists.txt
v100/end2end-energy-eval/resnet152Scnn/: CMakeLists.txt
v100/end2end-energy-eval/resnet50/: CMakeLists.txt
v100/end2end-energy-eval/vgg19Scnn/: CMakeLists.txt
v100/end2end-model-eval/densenet201Scnn/: CMakeLists.txt
v100/end2end-model-eval/resnet50Scnn/: CMakeLists.txt
v100/end2end-model-eval/vgg16/: CMakeLists.txt
v100/end2end-model-eval/vgg16Scnn/: CMakeLists.txt
v100/end2end-model-eval/vgg19/: CMakeLists.txt
(+16 files in other folders)
